--- a/src/Dash/Dash.css
+++ b/src/Dash/Dash.css
@@ -12,11 +12,11 @@
   align-items: center;
   justify-content: space-between;
   backdrop-filter: blur(2rems);
-  height: 60px;
+  height: 27px;
 }
 
 .logos {
-    height:3rem;
+    height:2.5rem;
     width:auto;
 
 
@@ -25,8 +25,8 @@
 .header button {
     color: var(--light-back);
     background-color: inherit;
-    font-size: 1.9rem;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 1.2rem;
+    font-family: Haettenschweiler, sans-serif;
     padding-left: 0.9rem;
     padding-right:0.9rem;
     padding-top: 0.1rem;
@@ -34,7 +34,7 @@
     border-radius: 2rem;
     cursor: pointer;
     transition: ease-in 0.3s;
-    height: 45px;
+    height: 30px;
 }
 
 .header button:hover {
@@ -51,17 +51,20 @@
 
 #Logo {
     padding-left: 2rem;
-    height: 4rem;
+    height: 3rem;
     width: auto;
 }
 
 .connectButton {
-    padding-right: 4rem;
+    padding-right: 3.5rem;
     display: flex;
     align-items: center;
-    gap: 2rem;
+    gap: 1.3rem;
 }
 
+.connectButton h2 {
+    font-size: 1.2rem;
+}
 
 /* Content Area */
 .contentArea {
