--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   -moz-osx-font-smoothing: grayscale;
   
   --light-back: #e3e3e3;
-  --dark-back: #180f33;
+  --dark-back: #170d36;
 }
 
 /* #e3e3e3 - Light Purple */
