--- a/src/Dash/Dash.css
+++ b/src/Dash/Dash.css
@@ -13,6 +13,7 @@
   justify-content: space-between;
   backdrop-filter: blur(2rems);
   height: 27px;
+
 }
 
 .logos {
@@ -60,20 +61,73 @@
     display: flex;
     align-items: center;
     gap: 1.3rem;
+    
+}
+
+#connectbtn {
+    /* border-style: solid; */
+    padding-top:3px;
+    padding-bottom:2.6px;
+    border: 2px solid white;
 }
 
 .connectButton h2 {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
 }
 
 /* Content Area */
 .contentArea {
     background-color: white;
-    display: flex;
-    height: 82vh ;
+    color:black;
+    display: grid;
+    grid-template-columns: 1.8fr 1.3fr 1.5fr;
+    justify-content: space-around;
+    min-height: 82vh ;
     margin:0.7rem;
     margin-left: 2rem;
     margin-right: 2rem;
     border-radius: 2rem;
-    box-shadow: 4px 4px 10px rgba(0,0,0,0.2);
+    padding: 1rem;
+    
 }
+
+.contentArea * {
+    background-color: var(--light-back);
+    margin: 4px;
+    padding-left: 15px;
+    padding-right: 8px;
+    color: var(--dark-back);
+    border-radius: 15px;
+    
+}
+
+.contentArea * .hr {
+    color: var(--light-back);
+}
+
+/* Assigned Caps */
+
+.capbtns {
+    margin-top: 10px;
+    display: flex;
+}
+
+.capbtns button {
+    background-color: var(--dark-back);
+    color: var(--light-back);
+    font-size: 1.3rem;
+
+}
+
+.activeChainCaps { 
+    display: flex;
+    gap:0.2px;
+}
+
+.activeChainCaps img {
+    height: 1.2rem;
+    width:auto;
+
+}
+
+
